tests/sumo/extended/vaporizer/errors/id_missing/errors.sumo
Warning: Vaporizers are deprecated. Use rerouters instead.
Error: Attribute 'id' is missing in definition of a vaporizer.
Quitting (on error).
